--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+src/main/webapp/js/candies
+src/main/webapp/js/app
