--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-app.name                                                        = phyts-server
-persistence.unit.name                                           = phyts-server
+app.name                                                        = ionic-exercise-server
+persistence.unit.name                                           = server-persistence-unit
 
