--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.isep</groupId>
+	<groupId>org.jsweet</groupId>
 	<artifactId>ionic-exercise-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -267,7 +267,7 @@
 				<!-- </execution> -->
 				<!-- </executions> -->
 				<configuration>
-					<targetGroups>fr.isep</targetGroups>
+					<targetGroups>org.jsweet</targetGroups>
 					<minimize>true</minimize>
 					<destinationFolder>${basedir}/src/main/webapp/</destinationFolder>
 					<cssDestinationFolder>${basedir}/src/main/webapp/css/</cssDestinationFolder>
@@ -288,7 +288,7 @@
 						<endorseddirs>${endorsed.dir}</endorseddirs>
 					</compilerArguments>
 					<excludes>
-						<exclude>**/fr/isep/client/*</exclude>
+						<exclude>**/org/jsweet/ionicexercise/client/*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
