--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jersey-version>1.19</jersey-version>
+		<jersey.version>2.22.2</jersey.version>
 	</properties>
 
 	<profiles>
@@ -152,19 +152,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>${jersey-version}</version>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<!-- use the following artifactId if you don't need servlet 2.x compatibility -->
+			<!-- artifactId>jersey-container-servlet</artifactId -->
 		</dependency>
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-json</artifactId>
-			<version>${jersey-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-servlet</artifactId>
-			<version>${jersey-version}</version>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-moxy</artifactId>
 		</dependency>
 
 		<!-- JSweet CLIENT -->
@@ -218,22 +213,12 @@
 			<artifactId>knockout.punches</artifactId>
 			<version>0.5.1-SNAPSHOT</version>
 		</dependency>
-		
-		<!-- <dependency> <groupId>org.jsweet.candies</groupId> <artifactId>knockout.mapping</artifactId> 
-			<version>2.0.0-SNAPSHOT</version> </dependency> -->
-
 
 		<!-- test libraries -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>${jersey-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -250,33 +235,22 @@
 		</dependency>
 
 	</dependencies>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.glassfish.jersey</groupId>
+				<artifactId>jersey-bom</artifactId>
+				<version>${jersey.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<finalName>ionic-exercise-server</finalName>
 		<plugins>
-			<plugin>
-				<groupId>ro.isdc.wro4j</groupId>
-				<artifactId>wro4j-maven-plugin</artifactId>
-				<version>1.6.1</version>
-				<!-- <executions> -->
-				<!-- <execution> -->
-				<!-- <phase>compile</phase> -->
-				<!-- <goals> -->
-				<!-- <goal>run</goal> -->
-				<!-- </goals> -->
-				<!-- </execution> -->
-				<!-- </executions> -->
-				<configuration>
-					<targetGroups>org.jsweet</targetGroups>
-					<minimize>true</minimize>
-					<destinationFolder>${basedir}/src/main/webapp/</destinationFolder>
-					<cssDestinationFolder>${basedir}/src/main/webapp/css/</cssDestinationFolder>
-					<jsDestinationFolder>${basedir}/src/main/webapp/js/</jsDestinationFolder>
-					<contextFolder>${basedir}/src/main/webapp/</contextFolder>
-					<wroFile>${basedir}/src/main/webapp/WEB-INF/wro.xml</wroFile>
-					<ignoreMissingResources>false</ignoreMissingResources>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -288,7 +262,7 @@
 						<endorseddirs>${endorsed.dir}</endorseddirs>
 					</compilerArguments>
 					<excludes>
-						<exclude>**/org/jsweet/ionicexercise/client/*</exclude>
+						<exclude>**/org/jsweet/ionicexercise/client/app/*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
@@ -317,19 +291,6 @@
 					<configuration>
 						<lifecycleMappingMetadata>
 							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>ro.isdc.wro4j</groupId>
-										<artifactId>wro4j-maven-plugin</artifactId>
-										<versionRange>[1.0,)</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute />
-									</action>
-								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
